<resources>
    <string name="app_name">SQLite</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="submit">Submit</string>
    <string name="show_data">Show Data</string>
    <string name="edit_data">Edit Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="data_from_the_database_will_be_displayed_here">Data from the database will be displayed here</string>
</resources>